optimized turbo.json and completed basic init

--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,7 @@
     "build": {
       "dependsOn": ["^build"],
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": [".next/**", "!.next/cache/**"]
+      "outputs": [".next/**", "!.next/cache/**", "dist/**"]
     },
     "lint": {
       "dependsOn": ["^lint"]
@@ -17,5 +17,8 @@
       "cache": false,
       "persistent": true
     }
-  }
+  },
+  "globalDependencies": [".env", "tsconfig.json", "**/*typescript-config/*"],
+  "cacheDir": ".turbo/cache",
+  "daemon": true
 }
