--- a/apps/http-backend/tsconfig.json
+++ b/apps/http-backend/tsconfig.json
@@ -3,6 +3,8 @@
     "include": ["src/**/*.ts", "src/**/*.d.ts"],
     "compilerOptions": {
         "rootDir": "./src",
-        "outDir": "./dist"
+        "outDir": "./dist",
+        "declaration": true,
+        "declarationMap": true
     }
 }
