--- a/packages/commons/package.json
+++ b/packages/commons/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc -b"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*"
   },
   "exports": {
-    "./authSchemas": "./src/schemas/authSchemas.ts",
-    "./roomSchemas": "./src/schemas/roomSchemas.ts"
+    "./authSchemas": "./dist/schemas/authSchemas.js",
+    "./roomSchemas": "./dist/schemas/roomSchemas.js"
   },
   "keywords": [],
   "author": "",
