--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -2,8 +2,10 @@
   "name": "@repo/db",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc -b"
   },
   "keywords": [],
   "author": "",
@@ -13,7 +15,7 @@
     "@prisma/client": "^6.12.0"
   },
   "exports": {
-    "./prisma": "./src/index.ts"
+    "./prisma": "./dist/index.js"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
