--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -10,9 +10,9 @@
     "dev": "tsc -b && node dist/index.js"
   },
   "devDependencies": {
-    "@repo/typescript-config": "workspace:*",
+    "@repo/commons": "workspace:*",
     "@repo/db": "workspace:*",
-    "@repo/commons": "workspace:*"
+    "@repo/typescript-config": "workspace:*"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +23,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^6.0.0",
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "zod": "^4.0.5"
