--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -10,9 +10,9 @@
     "dev": "tsc -b && node dist/index.js"
   },
   "devDependencies": {
-    "@repo/typescript-config": "workspace:*",
     "@repo/commons": "workspace:*",
-    "@repo/db": "workspace:*"
+    "@repo/db": "workspace:*",
+    "@repo/typescript-config": "workspace:*"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +21,7 @@
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.10",
     "@types/ws": "^8.18.1",
+    "dotenv": "^17.2.0",
     "jsonwebtoken": "^9.0.2",
     "ws": "^8.18.3"
   }
