--- a/apps/ws-backend/package.json
+++ b/apps/ws-backend/package.json
@@ -2,6 +2,7 @@
   "name": "ws-backend",
   "version": "1.0.0",
   "main": "dist/index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -b",
@@ -9,6 +10,8 @@
     "dev": "tsc -b && node dist/index.js"
   },
   "devDependencies": {
+    "@repo/commons": "workspace:*",
+    "@repo/db": "workspace:*",
     "@repo/typescript-config": "workspace:*"
   },
   "keywords": [],
@@ -16,7 +19,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/ws": "^8.18.1",
+    "dotenv": "^17.2.0",
+    "jsonwebtoken": "^9.0.2",
     "ws": "^8.18.3"
   }
 }
