added schema for user message to ws layer

--- a/packages/commons/package.json
+++ b/packages/commons/package.json
@@ -11,7 +11,8 @@
   },
   "exports": {
     "./authSchemas": "./dist/schemas/authSchemas.js",
-    "./roomSchemas": "./dist/schemas/roomSchemas.js"
+    "./roomSchemas": "./dist/schemas/roomSchemas.js",
+    "./wsSchemas": "./dist/schemas/wsSchemas.js"
   },
   "keywords": [],
   "author": "",
