--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,10 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.30.1",
+    "@repo/db": "workspace:*",
     "@repo/ui": "workspace:*",
+    "@repo/commons": "workspace:*",
     "@tailwindcss/postcss": "^4.1.11",
     "autoprefixer": "^10.4.21",
     "next": "^15.4.2",
