--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,15 +12,21 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.30.1",
-    "@repo/db": "workspace:*",
-    "@repo/ui": "workspace:*",
+    "@radix-ui/react-slot": "^1.2.3",
     "@repo/commons": "workspace:*",
+    "@repo/db": "workspace:*",
     "@tailwindcss/postcss": "^4.1.11",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.11.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.539.0",
+    "motion": "^12.23.12",
     "next": "^15.4.2",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
@@ -30,6 +36,7 @@
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.1",
     "eslint": "^9.31.0",
+    "tw-animate-css": "^1.3.6",
     "typescript": "5.8.2"
   }
 }
