--- a/apps/http-backend/package.json
+++ b/apps/http-backend/package.json
@@ -12,7 +12,8 @@
   "devDependencies": {
     "@repo/commons": "workspace:*",
     "@repo/db": "workspace:*",
-    "@repo/typescript-config": "workspace:*"
+    "@repo/typescript-config": "workspace:*",
+    "@types/cookies": "^0.9.1"
   },
   "keywords": [],
   "author": "",
@@ -23,6 +24,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^6.0.0",
+    "cookies": "^0.9.1",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
