--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.30.1",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@repo/commons": "workspace:*",
     "@repo/db": "workspace:*",
     "@tailwindcss/postcss": "^4.1.11",
@@ -23,9 +24,11 @@
     "lucide-react": "^0.539.0",
     "motion": "^12.23.12",
     "next": "^15.4.2",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   },
