added env to turbo

--- a/apps/web/turbo.json
+++ b/apps/web/turbo.json
@@ -2,7 +2,8 @@
     "extends": ["//"],
     "tasks": {
         "build": {
-            "outputs": [".next/**", "!.next/cache/**"]
+            "outputs": [".next/**", "!.next/cache/**"],
+            "env": ["HTTP_BACKEND_URL"]
         }
     }
 }
