--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,6 +17,7 @@
     "@repo/commons": "workspace:*",
     "@repo/db": "workspace:*",
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/ws": "^8.18.1",
     "autoprefixer": "^10.4.21",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
@@ -30,7 +31,8 @@
     "react-dom": "^19.1.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
