--- a/apps/web/turbo.json
+++ b/apps/web/turbo.json
@@ -3,7 +3,7 @@
     "tasks": {
         "build": {
             "outputs": [".next/**", "!.next/cache/**"],
-            "env": ["HTTP_BACKEND_URL"]
+            "env": ["HTTP_BACKEND_URL", "WS_BACKEND_URL"]
         }
     }
 }
