--- a/turbo.json
+++ b/turbo.json
@@ -17,7 +17,7 @@
     "dev": {
       "cache": false,
       "persistent": true,
-      "env": ["HTTP_BACKEND_URL"]
+      "env": ["HTTP_BACKEND_URL", "WS_BACKEND_URL"]
     }
   },
   "globalDependencies": [".env", "tsconfig.json", "**/*typescript-config/*"],
